Init test endpoints
